@@ -1,3 +1,11 @@
+15-07-2004 :
+ - wxbHistoryTextCtrl : Created a new text control that keep an history
+     of typed commands.
+
+14-07-2004 :
+ - wxbMainFrame : Fixed config file problem when changing the default
+     configuration file (Linux)
+
 03-07-2004 :
  - wxbConfigPanel : Fixed ?: operator cast problem with gcc 2.95.
 
